--- a/css/cover.css
+++ b/css/cover.css
@@ -27,7 +27,8 @@ a:hover {
 html,
 body {
     height: 100%;
-    background-color: #333;
+    background-image: url("../assets/images/leather-background.jpg");
+    background-size: cover;
 }
 body {
     color: #fff;
