Change Background image and text
- Change the background image to firenxe.png, taken by [http://leanrob.com](Robert Byrne)

- Change the text to a discription of [http://leanrob.com](Robert Byrne)

- Change the links to link to [http://leanrob.com](leanrob.com)

--- a/css/cover.css
+++ b/css/cover.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
     height: 100%;
-    background-image: url("../assets/images/leather-background.jpg");
+    background-image: url("../assets/images/firenze.png");
     background-size: cover;
 }
 body {
